# keystone

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.opa  README.md  committed.toml  context.md  deny.toml  dist-workspace.toml  gitleaks.toml  rustfmt.toml  skaffold.yaml  typos.toml
crates/api-types/: CHANGELOG.md  Cargo.toml
crates/api-types/src/: catalog.rs  catalog_conv.rs  common.rs  error.rs  error_conv.rs  federation.rs  k8s_auth.rs  lib.rs  scope.rs  scope_conv.rs  secret_serde.rs  trust.rs  v3.rs  v4.rs  version.rs  webauthn.rs
crates/appcred-sql/: CHANGELOG.md  Cargo.toml
crates/appcred-sql/src/: application_credential.rs  entity.rs  lib.rs
crates/audit/: CHANGELOG.md  Cargo.toml
crates/audit/src/: dispatcher.rs  kdf.rs  lib.rs  metrics.rs  sanitize.rs  spool.rs  types.rs
crates/audit/tests/: hmac_vectors.rs
crates/auth-plugin-runtime/: CHANGELOG.md  Cargo.toml
crates/auth-plugin-runtime/src/: lib.rs  mapping_contract.rs  route_contract.rs
crates/auth-plugin-runtime/tests/: reference_plugin.rs
crates/cli-manage/: CHANGELOG.md  Cargo.toml
crates/cli-manage/src/: bootstrap.rs  catalog.rs  common.rs  credential.rs  db.rs  main.rs  oauth2.rs  storage.rs  token.rs
crates/config/: CHANGELOG.md  Cargo.toml
crates/config/src/: api_key.rs  application_credentials.rs  assignment.rs  audit.rs  auth.rs  auth_plugin_identity.rs  auth_plugins.rs  catalog.rs  common.rs  credential.rs  database.rs  default.rs  distributed_storage.rs  dynamic_plugin_identity.rs  dynamic_plugins.rs  ec2.rs  federation.rs  fernet_token.rs  identity.rs  identity_mapping.rs  idmapping.rs  interface.rs  jws_token.rs  k8s_auth.rs  ldap.rs  lib.rs  listener.rs  local_emergency.rs  mapping.rs  oauth2.rs  oslo_middleware.rs  pagination.rs  policy.rs  rate_limit.rs  resource.rs  revoke.rs  role.rs  scim_realm.rs  scim_resource.rs  security_compliance.rs  (+6 more)
crates/core/: CHANGELOG.md  Cargo.toml  README.md
crates/core-types/: CHANGELOG.md  Cargo.toml
crates/core-types/src/: api_key.rs  application_credential.rs  assignment.rs  auth.rs  catalog.rs  credential.rs  error.rs  events.rs  federation.rs  identity.rs  identity_mapping.rs  idmapping.rs  k8s_auth.rs  lib.rs  mapping.rs  oauth2_client.rs  oauth2_key.rs  oauth2_session.rs  resource.rs  revoke.rs  role.rs  scim.rs  scope.rs  spiffe.rs  token.rs  trust.rs
crates/core/benches/: fernet_token.rs
crates/core/src/: api.rs  api_key.rs  auth.rs  auth_plugin.rs  auth_plugin_auth.rs  auth_plugin_http.rs  auth_plugin_startup.rs  cadf_hook.rs  common.rs  config.rs  db.rs  dynamic_plugin.rs  dynamic_plugin_auth.rs  dynamic_plugin_http.rs  dynamic_plugin_startup.rs  error.rs  events.rs  keystone.rs  lib.rs  mocks.rs  net.rs  oauth2_client.rs  oauth2_key.rs  oauth2_session.rs  plugin_manager.rs  policy.rs  provider.rs  rate_limit.rs  spiffe.rs  tests.rs
crates/credential-driver-sql/: CHANGELOG.md  Cargo.toml
crates/credential-driver-sql/src/: credential.rs  entity.rs  error.rs  fernet.rs  lib.rs  migrate.rs  rotate.rs  test_support.rs
crates/dynamic-plugin-identity-driver-raft/: Cargo.toml
crates/dynamic-plugin-identity-driver-raft/src/: lib.rs
crates/dynamic-plugin-runtime/: Cargo.toml
crates/dynamic-plugin-runtime/src/: auth_contract.rs  host_functions.rs  lib.rs
crates/dynamic-plugin-runtime/tests/: reference_plugin.rs
crates/federation-sql/: CHANGELOG.md  Cargo.toml
crates/federation-sql/src/: auth_state.rs  entity.rs  identity_provider.rs  lib.rs  mapping.rs
crates/identity-driver-ldap/: CHANGELOG.md  Cargo.toml
crates/identity-driver-ldap/src/: authenticate.rs  connection.rs  enabled.rs  filter.rs  group.rs  id_dn.rs  lib.rs  live_tests.rs  models.rs  user.rs
crates/identity-sql/: CHANGELOG.md  Cargo.toml
crates/identity-sql/src/: authenticate.rs  federated_user.rs  group.rs  lib.rs  local_user.rs  nonlocal_user.rs  password.rs  service_account.rs  user.rs  user_option.rs
crates/idmapping-sql/: CHANGELOG.md  Cargo.toml
crates/idmapping-sql/src/: entity.rs  id_mapping.rs  lib.rs
crates/k8s-auth-driver-raft/: CHANGELOG.md  Cargo.toml
crates/k8s-auth-driver-raft/src/: lib.rs
crates/k8s-auth-driver-sql/: CHANGELOG.md  Cargo.toml
crates/k8s-auth-driver-sql/src/: entity.rs  lib.rs
crates/k8s-auth-raft/: CHANGELOG.md  Cargo.toml
crates/k8s-auth-raft/src/: lib.rs
crates/key-repository/: CHANGELOG.md  Cargo.toml
crates/key-repository/src/: error.rs  filesystem.rs  lib.rs  source.rs
crates/keystone/: CHANGELOG.md  Cargo.toml  build.rs
crates/keystone/src/: api_key.rs  audit.rs  auth_plugin_http_client.rs  auth_plugin_identity.rs  common.rs  config.rs  dynamic_plugin_http_client.rs  dynamic_plugin_identity.rs  error.rs  k8s_auth_client.rs  keystone.rs  lib.rs  mapping.rs  oauth2_client.rs  oauth2_key.rs  oauth2_session.rs  plugin_manager.rs  policy.rs  provider.rs  scim.rs  scim_realm.rs  scim_resource.rs  server.rs  tests.rs  webauthn.rs
crates/keystone_api_types/: CHANGELOG.md  Cargo.toml
crates/keystone_api_types/src/: catalog.rs  error.rs  lib.rs
crates/keystone_distributed_storage/: CHANGELOG.md  Cargo.toml  README.md
crates/keystone_distributed_storage/proto/: identity.proto  identity_types.proto  raft.proto
crates/keystone_distributed_storage/src/: app.rs  network.rs  proto_impl.rs  types.rs
crates/keystone_distributed_storage/tests/: test_cluster.rs
crates/local-emergency-store/: CHANGELOG.md  Cargo.toml
crates/local-emergency-store/src/: gossip.rs  guardrail.rs  key.rs  lib.rs  mock.rs
crates/mapping-driver-raft/: CHANGELOG.md  Cargo.toml
crates/mapping-driver-raft/src/: lib.rs
crates/oauth2-client-driver-raft/: CHANGELOG.md  Cargo.toml
crates/oauth2-client-driver-raft/src/: lib.rs
crates/oauth2-key-driver-raft/: CHANGELOG.md  Cargo.toml
crates/oauth2-key-driver-raft/src/: lib.rs
crates/oauth2-session-driver-raft/: CHANGELOG.md  Cargo.toml
crates/password-hashing/: CHANGELOG.md  Cargo.toml
crates/storage-api/: CHANGELOG.md  Cargo.toml  README.md
crates/storage-api/src/: lib.rs
(+2957 files in other folders)
