[workspace]
members = [
  "crates/keystone_distributed_storage",
  "crates/keystone",
  "tests/federation",
  "tests/integration",
  "tests/api",
  "tests/loadtest"
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
authors = ["Artem Goncharov (gtema)"]
rust-version = "1.90"  # MSRV
repository = "https://github.com/openstack-experimental/keystone"
homepage = "https://openstack-experimental.github.io/keystone"
# Exclude content not relevant for the package
exclude = [
  ".github",
  "doc",
  "tests",
  "tools"
]

[workspace.dependencies]
async-trait = { version = "0.1" }
axum = { version = "0.8" }
base64 = { version = "0.22" }
base64urlsafedata = "0.5"
bcrypt = { version = "0.18" }
byteorder = { version = "1.5" }
bytes = { version = "1.11" }
chrono = { version = "0.4", default-features = false }
clap = { version = "4.5" }
color-eyre = { version = "0.6" }
config = { version = "0.15" }
criterion = { version = "0.8" }
derive_builder = { version = "0.20" }
dyn-clone = { version = "1.0" }
eyre = { version = "0.6" }
fernet = { version = "0.2", default-features = false }
futures = { version = "0.3" }
futures-util = { version = "0.3" }
http-body-util = "0.1"
hyper = { version = "1.8" }
hyper-util = { version = "0.1" }
itertools = { version = "0.14" }
mockall = { version = "0.14" }
mockall_double = { version = "0.3" }
nix = { version = "0.31", default-features = false }
# opa-wasm = { version = "^0.1", optional = true }
openidconnect = { version = "4.0" }
openraft = { version = "0.10" }
prost = { version = "0.14" }
rand = { version = "0.9" }
regex = { version = "1.12" }
reqwest = { version = "0.13" }
rmp = { version = "0.8" }
rstest = "0.26"
schemars = { version = "1.2" }
scopeguard = "1.2.0"
sea-orm = { version = "1.1" }
sea-orm-migration = { version = "1.1" }
secrecy = { version = "0.10" }
serde = { version = "1.0" }
serde_bytes = { version = "0.11" }
serde_json = { version = "1.0" }
serde_urlencoded = { version = "0.7" }
tempfile = { version = "3.25" }
thiserror = { version = "2.0" }
tokio = { version = "1.49" }
tokio-util = { version = "0.7" }
tonic = { version = "0.14" }
tonic-prost-build = { version = "0.14" }
tonic-prost = { version = "0.14" }
tower = { version = "0.5" }
tower-http = { version = "0.6" }
tracing = { version = "0.1" }
tracing-appender = { version = "0.2" }
tracing-subscriber = { version = "0.3" }
tracing-test = { version = "0.2" }
url = { version = "2.5" }
url-macro = { version = "0.2" }
utoipa = { version = "5.4" }
utoipa-axum = { version = "0.2" }
utoipa-swagger-ui = { version = "9.0", default-features = false }
uuid = { version = "1.20" }
validator = { version = "0.20" }
webauthn-authenticator-rs = { version = "0.5" }
webauthn-rs = { version = "0.5" }
webauthn-rs-proto = { version = "0.5" }

[profile.release]
strip = true
debug = false
lto = "thin"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
#codegen-units = 1

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
enum_glob_use = "deny"
expect_used = "deny"
print_stdout = "deny"
unwrap_used = "deny"
doc_paragraphs_missing_punctuation = "warn"

[patch.crates-io]
openraft = { git = "https://github.com/databendlabs/openraft", tag = "v0.10.0-alpha.13" }
