[workspace]
members = [
  "crates/api-key-driver-raft",
  "crates/api-types",
  "crates/audit",
  "crates/appcred-driver-sql",
  "crates/assignment-driver-sql",
  "crates/catalog-driver-sql",
  "crates/config",
  "crates/core",
  "crates/core-types",
  "crates/credential-driver-sql",
  "crates/auth-plugin-identity-driver-raft",
  "crates/auth-plugin-runtime",
  "crates/federation-driver-sql",
  "crates/identity-driver-sql",
  "crates/idmapping-driver-sql",
  "crates/k8s-auth-driver-raft",
  "crates/k8s-auth-driver-sql",
  "crates/key-repository",
  "crates/keystone",
  "crates/mapping-driver-raft",
  "crates/oauth2-client-driver-raft",
  "crates/oauth2-key-driver-raft",
  "crates/oauth2-session-driver-raft",
  "crates/resource-driver-sql",
  "crates/role-driver-sql",
  "crates/revoke-driver-sql",
  "crates/scim-driver-raft",
  "crates/storage",
  "crates/storage-api",
  "crates/storage-crypto",
  "crates/storage-crypto-pkcs11",
  "crates/storage-crypto-tpm",
  "crates/token-driver-fernet",
  "crates/token-driver-jws",
  "crates/token-restriction-driver-sql",
  "crates/trust-driver-sql",
  "crates/webauthn",
  "crates/cli-manage",
  "tests/api",
  "tests/integration",
  "tests/federation",
]
default-members = [
  "crates/*",
]
exclude = [
  "tests/loadtest"
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
authors = ["Artem Goncharov (gtema)"]
rust-version = "1.91"  # MSRV
repository = "https://github.com/openstack-experimental/keystone"
homepage = "https://openstack-experimental.github.io/keystone"
# Exclude content not relevant for the package
exclude = [
  ".github",
  "doc",
  "tests",
  "tools"
]

[workspace.dependencies]
aes-gcm = { version = "0.11" }
arc-swap = { version = "1.7" }
argon2 = { version = "0.5" }
askama = { version = "0.16" }
async-trait = { version = "0.1" }
axum = { version = "0.8", default-features = false }
axum-extra = { version = "0.12", default-features = false }
axum-server = { version = "0.8", default-features = false }
crc32fast = { version = "1.4" }
base64 = { version = "0.22" }
base64urlsafedata = "0.5"
bcrypt = { version = "0.19" }
byteorder = { version = "1.5" }
bytes = { version = "1.12" }
chrono = { version = "0.4", default-features = false }
clap = { version = "4.6" }
color-eyre = { version = "0.6" }
config = { version = "0.15" }
criterion = { version = "0.8" }
dashmap = "6.2"
data-encoding = "2"
derive_builder = { version = "0.20" }
dyn-clone = { version = "1.0" }
extism = { version = "1.30" }
eyre = { version = "0.6" }
fernet = { version = "0.2", default-features = false }
futures = { version = "0.3" }
futures-util = { version = "0.3" }
governor = "0.10"
http-body-util = "0.1"
http = { version = "1.4" }
hyper = { version = "1.10" }
hyper-util = { version = "0.1" }
hkdf = { version = "0.13" }
hmac = { version = "0.13" }
inventory = { version = "0.3" }
ipnet = { version = "2" }
itertools = { version = "0.15" }
mockall = { version = "0.15" }
mockall_double = { version = "0.3" }
nix = { version = "0.31", default-features = false }
openidconnect = { version = "4.0" }
openraft = { version = "=0.10.0-alpha.27" }
openstack-keystone-api-key-driver-raft = { version = "0.1", path = "crates/api-key-driver-raft/" }
openstack-keystone-api-types = { version = "0.1", features = ["openapi", "validate", "conv"], path = "crates/api-types" }
openstack-keystone-audit = { version = "0.1.0", path = "crates/audit" }
openstack-keystone-appcred-driver-sql = { version = "0.1", path = "crates/appcred-driver-sql/" }
openstack-keystone-assignment-driver-sql = { version = "0.1", path = "crates/assignment-driver-sql/" }
openstack-keystone-catalog-driver-sql = { version = "0.1", path = "crates/catalog-driver-sql/" }
openstack-keystone-config = { version = "0.1.0", path = "crates/config"}
openstack-keystone-core = { version = "0.1.0", path = "crates/core" }
openstack-keystone-core-types = { version = "0.1.0", path = "crates/core-types" }
openstack-keystone-credential-driver-sql = { version = "0.1", path = "crates/credential-driver-sql/" }
openstack-keystone-distributed-storage = { version = "0.1.0", path = "crates/storage"}
openstack-keystone-auth-plugin-identity-driver-raft = { version = "0.1.0", path = "crates/auth-plugin-identity-driver-raft" }
openstack-keystone-auth-plugin-runtime = { version = "0.1.0", path = "crates/auth-plugin-runtime" }
openstack-keystone-storage-api = { version = "0.1.0", path = "crates/storage-api" }
openstack-keystone-storage-crypto = { version = "0.1.0", path = "crates/storage-crypto" }
openstack-keystone-storage-crypto-pkcs11 = { version = "0.1.0", path = "crates/storage-crypto-pkcs11" }
openstack-keystone-storage-crypto-tpm = { version = "0.1.0", path = "crates/storage-crypto-tpm" }
openstack-keystone-federation-driver-sql = { version = "0.1", path = "crates/federation-driver-sql" }
openstack-keystone-k8s-auth-driver-sql = { version = "0.1", path = "crates/k8s-auth-driver-sql/" }
openstack-keystone-k8s-auth-driver-raft = { version = "0.1", path = "crates/k8s-auth-driver-raft/" }
openstack-keystone-key-repository = { version = "0.1.0", path = "crates/key-repository" }
openstack-keystone-mapping-driver-raft = { version = "0.1", path = "crates/mapping-driver-raft/" }
openstack-keystone-oauth2-client-driver-raft = { version = "0.1", path = "crates/oauth2-client-driver-raft/" }
openstack-keystone-oauth2-key-driver-raft = { version = "0.1", path = "crates/oauth2-key-driver-raft/" }
openstack-keystone-oauth2-session-driver-raft = { version = "0.1", path = "crates/oauth2-session-driver-raft/" }
openstack-keystone-identity-driver-sql = { version = "0.1", path = "crates/identity-driver-sql" }
openstack-keystone-idmapping-driver-sql = { version = "0.1", path = "crates/idmapping-driver-sql/" }
openstack-keystone-resource-driver-sql = { version = "0.1", path = "crates/resource-driver-sql/" }
openstack-keystone-revoke-driver-sql = { version = "0.1", path = "crates/revoke-driver-sql/" }
openstack-keystone-role-driver-sql = { version = "0.1", path = "crates/role-driver-sql/" }
openstack-keystone-scim-driver-raft = { version = "0.1", path = "crates/scim-driver-raft/" }
openstack-keystone-token-driver-fernet = { version = "0.1.0", path = "crates/token-driver-fernet" }
openstack-keystone-token-driver-jws = { version = "0.1.0", path = "crates/token-driver-jws" }
openstack-keystone-token-restriction-driver-sql = { version = "0.1", path = "crates/token-restriction-driver-sql/" }
openstack-keystone-trust-driver-sql = { version = "0.1", path = "crates/trust-driver-sql/" }
openstack-keystone-webauthn = { version = "0.1", path = "crates/webauthn/"}
prost = { version = "0.14" }
rand = { version = "0.10" }
regex = { version = "1.12" }
regex-syntax = "0.8"
reqwest = { version = "0.13" }
rcgen = { version = "0.14", default-features = false, features = ["aws_lc_rs", "pem"] }
rmp = { version = "0.8" }
rstest = { version = "0.26" }
rmp-serde = "1.3"
rustls = { version = "0.23" }
schemars = { version = "1.2" }
scopeguard = "1.2.0"
serial_test = { version = "3.2" }
sea-orm = { version = "1.1", default-features = false }
sea-orm-migration = { version = "1.1", default-features = false }
secrecy = { version = "0.10" }
sha1 = { version = "0.11" }
sha2 = "0.11"
serde = { version = "1.0" }
serde_bytes = { version = "0.11" }
serde_json = { version = "1.0" }
serde_urlencoded = { version = "0.7" }
spiffe = { version = "0.16" }
spiffe-rustls = { version = "0.7", default-features = false, features = ["aws-lc-rs"] }
spiffe-rustls-tokio = { version = "0.4" }
temp-env = { version = "0.3" }
tempfile = { version = "3.27" }
thiserror = { version = "2.0" }
tokio = { version = "1.52", default-features = false }
tokio-rustls = "0.26.4"
tokio-util = { version = "0.7" }
tonic = { version = "0.14", default-features = false }
tonic-prost-build = { version = "0.14" }
tonic-prost = { version = "0.14" }
tower = { version = "0.5" }
tower-http = { version = "0.7" }
tracing = { version = "0.1" }
tracing-appender = { version = "0.2" }
tracing-subscriber = { version = "0.3" }
tracing-test = { version = "0.2" }
url = { version = "2.5" }
url-macro = { version = "0.2" }
utoipa = { version = "5.5" }
utoipa-axum = { version = "0.2" }
utoipa-swagger-ui = { version = "9.0", default-features = false }
uuid = { version = "1.23", features = ["v4"] }
validator = { version = "0.20" }
x509-parser = { version = "0.18" }
webauthn-authenticator-rs = { version = "0.5" }
webauthn-rs = { version = "0.5" }
webauthn-rs-proto = { version = "0.5" }

[profile.release]
strip = true
debug = false
lto = "thin"

[profile.skaffold]
inherits = "release"
lto = false
incremental = false
codegen-units = 16

[profile.dist]
inherits = "release"
lto = "thin"
#codegen-units = 1

[profile.dev.package."*"]
debug = false

[profile.dev]
debug = 1
split-debuginfo = "deny"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
enum_glob_use = "deny"
expect_used = "deny"
print_stdout = "deny"
unwrap_used = "deny"
doc_paragraphs_missing_punctuation = "warn"
