[package]
name = "openstack-keystone-api-types"
description = "OpenStack Keystone API types"
version = "0.1.1"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
default = []
builder = ["dep:derive_builder"]
openapi = ["dep:utoipa"]
validate = ["dep:validator"]

[dependencies]
base64.workspace = true
chrono = { workspace = true, features = ["serde"] }
derive_builder = { workspace = true, optional = true }
http = { workspace = true, optional = true }
secrecy = { workspace = true, features = ["serde"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
utoipa = { workspace = true, features = ["chrono"], optional = true }
validator = { workspace = true, features = ["derive"], optional = true }
webauthn-rs-proto.workspace = true
