[package]
name = "openstack-keystone-audit"
description = "OpenStack Keystone CADF-compliant audit framework"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
arc-swap.workspace = true
chrono = { workspace = true, features = ["serde", "now"] }
hmac.workspace = true
hkdf.workspace = true
openstack-keystone-core-types.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "rt"] }
tracing.workspace = true
uuid = { workspace = true, features = ["v4"] }

[features]
default = []
testing = []

[dev-dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
