[package]
name = "openstack-keystone-auth-plugin-runtime"
description = "OpenStack Keystone dynamic (WebAssembly) auth plugin runtime"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
exclude.workspace = true

[dependencies]
extism.workspace = true
openstack-keystone-config.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
config = { workspace = true, features = ["ini"] }
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }

[lints]
workspace = true
