[package]
name = "openstack-keystone-cli-manage"
description = "OpenStack Keystone administrative CLI"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
exclude.workspace = true

[[bin]]
name="keystone-manage"
path="src/main.rs"

[dependencies]
async-trait.workspace = true
clap = { workspace = true, features = ["derive"] }
color-eyre.workspace = true
comfy-table = "7.2"
eyre.workspace = true
inventory.workspace = true
openstack-keystone = { version = "0.1", path = "../keystone" }
openstack-keystone-config.workspace = true
openstack-keystone-core.workspace = true
openstack-keystone-distributed-storage.workspace = true
sea-orm.workspace = true
sea-orm-migration.workspace = true
secrecy = { workspace = true, features = ["serde"] }
tokio = { workspace = true, features = ["fs", "macros"] }
tonic = { workspace = true, features = ["tls-aws-lc" ] }
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
