[package]
name = "openstack-keystone-config"
description = "OpenStack Keystone configuration"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
exclude.workspace = true

[dependencies]
chrono = { workspace = true, features = ["now"] }
config = { workspace = true, features = ["async", "ini"] }
eyre.workspace = true
regex.workspace = true
secrecy = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
url = { workspace = true, features = ["serde"] }
url-macro.workspace = true

[lints]
workspace = true
