[package]
name = "openstack-keystone-core-types"
description = "OpenStack Keystone service core types"
version = "0.1.1"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
base64.workspace = true
chrono = { workspace = true, features = ["serde", "now"] }
derive_builder.workspace = true
eyre.workspace = true
secrecy = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
url = { workspace = true, features = ["serde"] }
uuid.workspace = true
validator = { workspace = true, features = ["derive"] }

[dev-dependencies]
url.workspace = true

[features]
default = []
bench_internals = []
