[package]
name = "openstack-keystone-core"
description = "OpenStack Keystone service"
version = "0.1.1"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
axum.workspace = true
base64.workspace = true
bcrypt = { workspace = true, features = ["alloc"] }
chrono.workspace = true
config = { workspace = true, features = ["async", "ini"] }
derive_builder.workspace = true
eyre.workspace = true
jsonwebtoken = { version = "10.3", features = ["rust_crypto"] }
openstack-keystone-api-types = { version = "0.1", path = "../api-types/"}
mockall = { workspace = true, optional = true }
rand.workspace = true
regex.workspace = true
reqwest = { workspace = true, features = ["json", "http2", "gzip", "deflate"] }
schemars.workspace = true
sea-orm.workspace = true
secrecy = { workspace = true, features = ["serde"] }
serde.workspace = true
serde_json.workspace = true
serde_urlencoded.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs"] }
tracing.workspace = true
url = { workspace = true, features = ["serde"] }
url-macro.workspace = true
uuid = { workspace = true, features = ["v4"] }
validator = { workspace = true, features = ["derive"] }

[dev-dependencies]
httpmock = { version = "0.8", features = ["http2"] }
mockall.workspace = true
rstest.workspace = true
tracing-test = { workspace = true, features = ["no-env-filter"] }
url.workspace = true

[features]
default = []
bench_internals = []
mock = ["dep:mockall"]
