[package]
name = "openstack-keystone-core"
description = "OpenStack Keystone service"
version = "0.1.2"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
axum = { workspace = true, default-features = false, features = ["json"], optional = true }
base64.workspace = true
bcrypt = { workspace = true, features = ["alloc"] }
chrono = { workspace = true, default-features = false }
derive_builder.workspace = true
eyre.workspace = true
inventory.workspace = true
jsonwebtoken = { version = "10.3", features = ["rust_crypto"] }
openstack-keystone-api-types = { version = "0.1", path = "../api-types/", optional = true }
openstack-keystone-core-types = { version = "0.1", path = "../core-types/" }
openstack-keystone-config = { version = "0.1", path = "../config/" }
openstack-keystone-distributed-storage = { version = "0.1", path = "../storage/"}
mockall = { workspace = true, optional = true }
rand.workspace = true
reqwest = { workspace = true, features = ["json", "http2", "gzip", "deflate"] }
sea-orm.workspace = true
secrecy = { workspace = true, features = ["serde"] }
serde.workspace = true
serde_json.workspace = true
serde_urlencoded.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs"] }
tracing.workspace = true
url = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v4"] }
validator.workspace = true

[dev-dependencies]
config = { workspace = true }
httpmock = { version = "0.8", features = ["http2"] }
mockall.workspace = true
rstest.workspace = true
tracing-test = { workspace = true, features = ["no-env-filter"] }
url.workspace = true

[features]
default = []
api = ["openstack-keystone-api-types/builder", "dep:axum", "openstack-keystone-api-types/conv"]
bench_internals = []
mock = ["dep:mockall"]
