[package]
name = "openstack-keystone-core"
description = "OpenStack Keystone service"
version = "0.1.1"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
arc-swap.workspace = true
argon2.workspace = true
async-trait.workspace = true
openstack-keystone-audit = { workspace = true }
axum = { workspace = true, default-features = false, features = ["json", "tokio"], optional = true }
base64.workspace = true
bcrypt = { workspace = true, features = ["alloc"] }
chrono = { workspace = true, default-features = false }
crc32fast.workspace = true
data-encoding.workspace = true
derive_builder.workspace = true
openstack-keystone-auth-plugin-runtime.workspace = true
eyre.workspace = true
governor.workspace = true
hmac.workspace = true
dashmap.workspace = true
inventory.workspace = true
ipnet.workspace = true
openstack-keystone-api-types = { workspace = true, optional = true }
openstack-keystone-core-types.workspace = true
openstack-keystone-config.workspace = true
openstack-keystone-key-repository.workspace = true
openstack-keystone-storage-api.workspace = true
jsonwebtoken.workspace = true
mockall = { workspace = true, optional = true }
p256 = { version = "0.13", features = ["ecdsa", "pkcs8"] }
rand.workspace = true
rsa = "0.9"
regex.workspace = true
regex-syntax.workspace = true
sea-orm.workspace = true
sea-orm-migration.workspace = true
secrecy = { workspace = true, features = ["serde"] }
sha1.workspace = true
sha2.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_urlencoded.workspace = true
thiserror.workspace = true
tokio = { workspace = true, default-features = false, features = ["net", "rt-multi-thread"] }
tracing.workspace = true
url = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v4"] }
validator.workspace = true
# pbkdf2 crate removed: PBKDF2-HMAC-SHA512 is implemented directly in
# password_hashing.rs using the workspace hmac/sha2 to avoid a
# digest v0.10 vs v0.11 version conflict (pbkdf2 v0.12 uses sha2 v0.10).
scrypt = "0.12"
subtle = "2.6.1"

[dev-dependencies]
axum = { workspace = true, default-features = false, features = ["json", "tokio"] }
config = { workspace = true }
httpmock = { version = "0.8", features = ["http2"] }
mockall.workspace = true
openstack-keystone-api-types = { workspace = true, features = ["builder", "conv"] }
openstack-keystone-audit = { workspace = true, features = ["testing"] }
openstack-keystone-core-types = { workspace = true, features = ["mock"] }
rstest.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["process"] }
tracing-test = { workspace = true, features = ["no-env-filter"] }
url.workspace = true

[features]
default = []
api = ["openstack-keystone-api-types/builder", "dep:axum", "openstack-keystone-api-types/conv"]
bench_internals = []
mock = ["dep:mockall", "openstack-keystone-core-types/mock", "openstack-keystone-audit/testing"]
