[package]
name = "openstack-keystone-credential-driver-sql"
description = "OpenStack Keystone credentials SQL driver"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
exclude.workspace = true

[dependencies]
async-trait.workspace = true
base64 = { workspace = true }
fernet = { workspace = true, features = ["rustcrypto"] }
inventory.workspace = true
openstack-keystone-config.workspace = true
openstack-keystone-core.workspace = true
openstack-keystone-core-types.workspace = true
openstack-keystone-key-repository.workspace = true
sea-orm = { workspace = true, features = ["default"] }
secrecy = { workspace = true }
serde_json.workspace = true
sha2.workspace = true
tempfile = { workspace = true }
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "macros"] }
tracing.workspace = true
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
openstack-keystone-core = { workspace = true, features = ["mock"] }
sea-orm = { workspace = true, features = ["mock", "sqlx-sqlite", "runtime-tokio"] }
tempfile = { workspace = true }

[features]
test-support = []

[lints]
workspace = true
