[package]
name = "openstack-keystone-identity-driver-ldap"
description = "OpenStack Keystone LDAP driver for the identity provider"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
exclude.workspace = true

[dependencies]
async-trait.workspace = true
chrono = { workspace = true, features = ["now"] }
eyre.workspace = true
ldap3.workspace = true
openstack-keystone-config.workspace = true
openstack-keystone-core.workspace = true
openstack-keystone-core-types.workspace = true
rand.workspace = true
secrecy.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["sync", "macros"] }
tracing.workspace = true

[dev-dependencies]
openstack-keystone-core = { workspace = true, features = ["mock"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing-test = { workspace = true, features = ["no-env-filter"] }

[lints]
workspace = true
