[package]
name = "openstack-keystone-identity-sql"
description = "OpenStack Keystone SQL driver for the identity provider"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
exclude.workspace = true

[dependencies]
async-trait.workspace = true
chrono = { workspace = true, features = ["now"] }
openstack-keystone-config = { version = "0.1", path = "../config" }
openstack-keystone-core = { version = "0.1", path = "../core" }
sea-orm.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros"] }
tracing.workspace = true
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
chrono = { workspace = true, features = ["now"] }
derive_builder.workspace = true
openstack-keystone-core = { version = "0.1", path = "../core", features = ["mock"] }
sea-orm = { workspace = true, features = ["mock", "sqlx-sqlite" ]}
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros"] }
tracing-test = { workspace = true, features = ["no-env-filter"] }
uuid = { workspace = true, features = ["v4"] }

[lints]
workspace = true
