[package]
name = "openstack-keystone-idmapping-sql"
description = "OpenStack Keystone SQL driver or the ID mapping provider"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
exclude.workspace = true

[dependencies]
async-trait.workspace = true
openstack-keystone-core = { version = "0.1", path = "../core" }
sea-orm.workspace = true
tracing.workspace = true

[dev-dependencies]
chrono = { workspace = true, features = ["now"] }
openstack-keystone-core = { version = "0.1", path = "../core", features = ["mock"] }
sea-orm = { workspace = true, features = ["mock", "sqlx-sqlite" ]}
tokio = { workspace = true, features = ["macros"] }

[lints]
workspace = true
