[package]
name = "openstack-keystone-k8s-auth-driver-raft"
description = "OpenStack Keystone Raft driver for the K8s auth provider"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
exclude.workspace = true

[dependencies]
async-trait.workspace = true
inventory.workspace = true
openstack-keystone-core.workspace = true
openstack-keystone-core-types.workspace = true
openstack-keystone-distributed-storage.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]

[lints]
workspace = true
