[package]
name = "openstack-keystone-k8s-auth-driver-sql"
description = "OpenStack Keystone SQL driver for the K8s Auth provider"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
exclude.workspace = true

[dependencies]
async-trait.workspace = true
inventory.workspace = true
openstack-keystone-core.workspace = true
openstack-keystone-core-types.workspace = true
sea-orm = { workspace = true, features = ["default"] }
sea-orm-migration.workspace = true
tracing.workspace = true
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
openstack-keystone-core = { workspace = true, features = ["mock"] }
sea-orm = { workspace = true, features = ["mock", "sqlx-sqlite" ]}
tokio = { workspace = true, features = ["macros"] }
uuid = { workspace = true, features = ["v4"] }


[lints]
workspace = true
